# onchain-fantasy-game

./: package.json
backend/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
backend/src/: blockchain.rs  database.rs  index.ts  main.rs  main_simple.rs  models.rs  test_backend.rs
backend/src/config/: database.ts
backend/src/controllers/: TournamentController.ts  mod.rs  tournaments_controller.rs
backend/src/models/: Tournament.ts  TournamentSchema.ts
backend/src/routes/: contests.ts  health.ts  mod.rs  tournaments.rs  tournaments.ts
backend/src/scripts/: seedTournaments.ts
backend/src/services/: BlockchainService.ts  TournamentService.ts  mod.rs  tournaments_service.rs
contracts/src/: Market.sol  MarketFactory.sol
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.css  main.tsx  vite-env.d.ts  wallet.ts
frontend/src/abi/: Market.json  MarketFactory.json
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  WalletConnect.tsx
frontend/src/lib/: contracts.ts
frontend/src/pages/: CreateContest.tsx  Home.tsx  MyTeams.tsx  NotFound.tsx
frontend/src/pages/markets/: Create.tsx  Detail.tsx  List.tsx
frontend/src/services/: api.ts
frontend/src/types/: global.d.ts
