[package]
name = "onchain-fantasy-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple"
path = "src/main_simple.rs"

[[bin]]
name = "test"
path = "src/test_backend.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
ethers = { version = "2", features = ["rustls"] }
anyhow = "1.0"
hex = "0.4"
mongodb = "2.8"
bson = { version = "2.8", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dotenvy = "0.15"

[profile.release]
opt-level = 3


